[Mac] Tooltips do not honor some types of obscuring windows https://bugs.webkit.org/show_bug.cgi?id=153263 <rdar://problem/21423972>

Reviewed by Simon Fraser.

Source/WebKit/mac:

* WebView/WebHTMLView.mm:
(-[WebHTMLView _updateMouseoverWithEvent:]): When the WebView is not the key window, don't
display tooltips.

Source/WebKit2:

Recognize that the current WebView is obscured by comparing the current event's Window Number against
the Window Number of the current WebView. If they don't match, something is in the way.

* UIProcess/Cocoa/WebViewImpl.h:
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::windowIsFrontWindowUnderMouse): Added.
* UIProcess/PageClient.h:
(WebKit::PageClient::windowIsFrontWindowUnderMouse):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::handleMouseEvent): Check if the current WebView is obscured. If it
is, clear the tooltip and return.
* UIProcess/mac/PageClientImpl.h:
* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::windowIsFrontWindowUnderMouse): Added.


Canonical link: https://commits.webkit.org/171417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195451 268f45cc-cd09-0410-ab3c-d52691b4dbfc