Source/WebKit2/UIProcess/PageClient.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010, 2011 Apple Inc. All rights reserved.
+ * Copyright (C) 2010, 2011, 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -59,6 +59,7 @@ namespace WebKit {
 
 class DrawingAreaProxy;
 class NativeWebKeyboardEvent;
+class NativeWebMouseEvent;
 class RemoteLayerTreeTransaction;
 class ViewSnapshot;
 class WebContextMenuProxy;
@@ -357,6 +358,8 @@ public:
 #endif
 
     virtual void didRestoreScrollPosition() = 0;
+
+    virtual bool windowIsFrontWindowUnderMouse(const NativeWebMouseEvent&) { return false; }
 };
 
 } // namespace WebKit
